--- a/src/main/resources/assets/index.html
+++ b/src/main/resources/assets/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Simple Redux Boilerplate</title>
+    <title>Echo</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
   </head>
   <body>
